--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "notion-example",
   "type": "module",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "@notionhq/client": "^0.1.9",
     "dotenv": "^10.0.0"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
